--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-  },
+},
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.0",
