--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+},
+"engines": {
+  "node": ">=18.18.0"
 },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.9",
